# epaper-with-raspberrypi

./: CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  FINAL_DELIVERY.md  FINAL_PROJECT_SUMMARY.md  GITHUB_RELEASE_GUIDE.md  GITHUB_操作步骤.md  IP_DISPLAY_GUIDE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  README_daily_word.md  RELEASE_NOTES.md  RELEASE_v2.0.md  SETUP_COMPLETION_REPORT.md  WINDOWS_SETUP_GUIDE.md  config.ini  daily_word_service.py  install_daily_word.sh  install_rpi.sh  manage.sh  pyproject.toml  quick_start.ps1  raspberry_pi_setup.md  requirements-dev.txt  requirements-windows.txt  requirements.txt  test_ip_display.py  test_windows.py  token.txt  validate_project.py
data/: daily_quote_cache.json  daily_word.json  daily_word_cache.json  requirements.txt  token.txt
docs/: README.md  deployment-summary.md  validate_docs.py
docs/api-reference/: api-documentation.md
docs/assets/scripts/: install.sh  manage.sh
docs/docker/: Dockerfile  安装过程.md
docs/installation-guide/: 01-system-requirements.md  02-hardware-setup.md  03-software-installation.md  04-configuration.md  05-deployment.md  06-maintenance.md  07-troubleshooting.md  README.md  deployment-checklist.md
docs/troubleshooting/: epaper-deployment-troubleshooting.md  quick-fix-guide.md
docs/user-manual/: user-guide.md
example/: display_epaper.py
src/: class_poem_api.py  class_word_api.py  daily_word_api_client.py  daily_word_config.py  daily_word_display.py  daily_word_display_controller.py  daily_word_display_epaper.py  daily_word_epaper_controller.py  daily_word_file_manager.py  daily_word_main.py  daily_word_rpi.py  daily_word_test.py  daily_word_test_simple.py  daily_word_vocabulary_manager.py  display_on_etouch.py  epaper_display_rpi.py  get_config.py  get_ipaddress.py  get_poem.py  get_weather.py  get_weather_api.py  main.py  process_poem_db_sql.py  process_poem_display_on_epaper.py  process_text_wrap.py  test_word_api.py  text_wrap.py  token.txt  waveshare_epd.py  word_config.py  word_config_rpi.py
src/waveshare_epd/: epd13in3k.py  epdconfig.py
tmp/: display_epaper.py  display_svg_epaper.py  display_test.py  get_bing_photo.py  get_poem.py  get_weather.py  init_poem_db.py  luckfox_GPIO.py  luckfox_epaper.py  luckfox_led.py  sql_poem_db.py  test_weather.py  token.txt
